--- a/labs/Lab_08_events_js/solution/task4/assets/css/style.css
+++ b/labs/Lab_08_events_js/solution/task4/assets/css/style.css
@@ -11,12 +11,16 @@
     margin-top: -350px;
 }
 .GenSpace {
+    grid-area: 1 / 1 / 2 / 6;  
+    height: 300px;
+    overflow-x: auto;
     border: 3px solid black;
     width: 100%;
     height: 350px;
     
 }
-.SpaceItem {
+.spaceItem {
+    float: left;
     width: 15%;
     height: 95%;
     margin-right: 10px;
@@ -25,5 +29,10 @@
 }
 .button1 {
     background-color: blueviolet;
-    
+    border-radius: 10px;
+}
+.some {
+    width: 150px;
+    height: 150px;
+    margin-top: 300px;
 }
